--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-mvvm-typescript",
   "version": "1.0.1",
-  "author":"worawut <voravutboy@gmail.com> ()",
+  "author":"worawut <voravutboy@gmail.com> (https://github.com/worawutboy/cra-template-mvvm-typescript)",
  "license": "MIT"
 }
