--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cra-template-mvvm-typescript",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "author":"worawut <voravutboy@gmail.com> (https://github.com/worawutboy/cra-template-mvvm-typescript)",
- "license": "MIT"
+ "license": "MIT",
+ "repository": {
+  "type": "git",
+  "url": "https://github.com/worawutboy/cra-template-mvvm-typescript"
+}
 }
